--- a/content/projects/highstorm.mdx
+++ b/content/projects/highstorm.mdx
@@ -1,11 +1,10 @@
 ---
-title: highstorm.app
+title: Test project
 description: Simple, fast, open source custom event tracking
-date: "2023-05-01"
+date: 2023-05-01
 url: https://highstorm.app
 published: true
-repository: "chronark/highstorm"
-  
+repository: chronark/highstorm
 ---
 
 
