--- a/content/projects/analogová-fotografie.mdx
+++ b/content/projects/analogová-fotografie.mdx
@@ -1,5 +1,5 @@
 ---
-title: "# Analogová fotografie"
+title: Analogova Fotografie
 description: Zkouším jak to vypadá, když přidám fotku
 date: 2023-07-27T08:19:52.441Z
 published: true
