Update Projects “test”

--- a/content/projects/test.mdx
+++ b/content/projects/test.mdx
@@ -1,6 +1,6 @@
 ---
-title: test
-description: test
+title: Analogue Photography
+description: test analogue photography photo
 date: 2023-07-27T08:34:29.063Z
 url: ""
 published: true
@@ -10,3 +10,5 @@ test
 test
 
 test
+
+![](/img/analog-3.jpeg)
