Update Projects “test”

--- a/content/projects/test.mdx
+++ b/content/projects/test.mdx
@@ -11,4 +11,6 @@ test
 
 test
 
-![viki](/img/analog-3.jpeg "viki")
+![viki](https://res.cloudinary.com/ddw1u49ec/image/upload/v1690447697/tadeasfort.com/analog-3_jk7rdt.jpg "viki")
+
+![](https://res.cloudinary.com/ddw1u49ec/image/upload/v1690447743/tadeasfort.com/portrait-outside-18_r9zlqa.jpg)
