Update Projects “test”

--- a/content/projects/test.mdx
+++ b/content/projects/test.mdx
@@ -4,6 +4,7 @@ description: test analogue photography photo
 date: 2023-07-27T08:34:29.063Z
 url: ""
 published: true
+repository: tadeasf
 ---
 test
 
